--- a/новый проект.html
+++ b/новый проект.html
@@ -214,19 +214,19 @@
         }
 
         .album-image1 {
-            background-image: url('img\posh_molly.jpg');
+            background-image: url('img/posh_molly.jpg');
         }
 
         .album-image2 {
-            background-image: url('img\serega.jpg');
+            background-image: url('img/serega.jpg');
         }
 
         .album-image3 {
-            background-image: url('img\molot.jpg');
+            background-image: url('img/molot.jpg');
         }
 
         .album-image4 {
-            background-image: url('img\7I.jpg');
+            background-image: url('img/7I.jpg');
         }
 
         .search-message, .unregistered-message {
@@ -277,19 +277,19 @@
             <div class="section">
                 <h2 class="section-title">Популярные песни</h2>
                 <div class="album-grid">
-                    <div class="album-item" onclick="location.href='html\1.html'">
+                    <div class="album-item" onclick="location.href='html/1.html'">
                         <div class="album-image album-image1"></div>
                         <div>Пошлая Молли - Паки пуси</div>
                     </div>
-                    <div class="album-item" onclick="location.href='html\2.html'">
+                    <div class="album-item" onclick="location.href='html/2.html'">
                         <div class="album-image album-image2"></div>
                         <div>Серега Пират - Гимн Дахака</div>
                     </div>
-                    <div class="album-item" onclick="location.href='html\3.html'">
+                    <div class="album-item" onclick="location.href='html/3.html'">
                         <div class="album-image album-image3"></div>
                         <div>М8Л8ТХ - Слезы Осени</div>
                     </div>
-                    <div class="album-item" onclick="location.href='html\4.html'">
+                    <div class="album-item" onclick="location.href='html/4.html'">
                         <div class="album-image album-image4"></div>
                         <div>Aphex Twin - Xtal</div>
                     </div>
