--- a/html/1.html
+++ b/html/1.html
@@ -75,7 +75,7 @@
         canvas.height = window.innerHeight - 150; 
 
         function initAudio() {
-            audio = new Audio('mus\poshmoll.mp3');
+            audio = new Audio('mus/poshmoll.mp3');
             audioContext = new (window.AudioContext || window.webkitAudioContext)();
             analyser = audioContext.createAnalyser();
             source = audioContext.createMediaElementSource(audio);
