--- a/новый проект.html
+++ b/новый проект.html
@@ -277,7 +277,7 @@
             <div class="section">
                 <h2 class="section-title">Популярные песни</h2>
                 <div class="album-grid">
-                    <div class="album-item" onclick="location.href='html/1.html'">
+                    <div class="album-item" onclick="location.href='html/paki.html'">
                         <div class="album-image album-image1"></div>
                         <div>Пошлая Молли - Паки пуси</div>
                     </div>
