--- a/новый проект.html
+++ b/новый проект.html
@@ -214,19 +214,19 @@
         }
 
         .album-image1 {
-            background-image: url('sosal/img/posh_molly.jpg');
+            background-image: url('/img/posh_molly.jpg');
         }
 
         .album-image2 {
-            background-image: url('sosal/img/serega.jpg');
+            background-image: url('/img/serega.jpg');
         }
 
         .album-image3 {
-            background-image: url('sosal/img/molot.jpg');
+            background-image: url('/img/molot.jpg');
         }
 
         .album-image4 {
-            background-image: url('sosal/img/7I.jpg');
+            background-image: url('/img/7I.jpg');
         }
 
         .search-message, .unregistered-message {
