--- a/html/paki.html
+++ b/html/paki.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <a href="html/новый проект.html" id="close">✖</a>
+    <a href="новый проект.html" id="close">✖</a>
     <canvas id="canvas"></canvas>
     <div id="controls">
         <span>Сила волн:</span>
