--- a/html/новый проект.html
+++ b/html/новый проект.html
@@ -277,19 +277,19 @@
             <div class="section">
                 <h2 class="section-title">Популярные песни</h2>
                 <div class="album-grid">
-                    <div class="album-item" onclick="location.href='html/paki.html'">
+                    <div class="album-item" onclick="location.href='paki.html'">
                         <div class="album-image album-image1"></div>
                         <div>Пошлая Молли - Паки пуси</div>
                     </div>
-                    <div class="album-item" onclick="location.href='html/2.html'">
+                    <div class="album-item" onclick="location.href='serega.html'">
                         <div class="album-image album-image2"></div>
                         <div>Серега Пират - Гимн Дахака</div>
                     </div>
-                    <div class="album-item" onclick="location.href='html/3.html'">
+                    <div class="album-item" onclick="location.href='SO.html'">
                         <div class="album-image album-image3"></div>
                         <div>М8Л8ТХ - Слезы Осени</div>
                     </div>
-                    <div class="album-item" onclick="location.href='html/4.html'">
+                    <div class="album-item" onclick="location.href='xtal.html'">
                         <div class="album-image album-image4"></div>
                         <div>Aphex Twin - Xtal</div>
                     </div>
