--- a/html/новый проект.html
+++ b/html/новый проект.html
@@ -218,15 +218,15 @@
         }
 
         .album-image2 {
-            background-image: url('/img/serega.jpg');
+            background-image: url('...img/serega.jpg');
         }
 
         .album-image3 {
-            background-image: url('/img/molot.jpg');
+            background-image: url('...img/molot.jpg');
         }
 
         .album-image4 {
-            background-image: url('/img/7I.jpg');
+            background-image: url('...img/7I.jpg');
         }
 
         .search-message, .unregistered-message {
