--- a/html/новый проект.html
+++ b/html/новый проект.html
@@ -214,7 +214,7 @@
         }
 
         .album-image1 {
-            background-image: url('/img/posh_molly.jpg');
+            background-image: url('sosal/img/posh_molly.jpg');
         }
 
         .album-image2 {
